# AnuYog-v2

./: .breakpoints  .replit  README.md  app.py  dass_prediction.ipynb  database.py  model_a.pkl  model_d.pkl  model_s.pkl  pyproject.toml  replit.nix  requirements.txt  rooms.json  suicide_detection.ipynb  suicide_model.pkl  viz.py
static/: style.css
templates/: about_us.txt  answers.html  available_counselors.html  bcounselor.html  book_counselor.html  chat.html  connect_counselor.html  contact_us.html  corousel.html  counselor.html  counselor_access_denied_questions.html  counselor_login.html  counselor_page.html  counselor_register.html  counselor_registered.html  footer.html  hero_login.html  hero_register.html  home.html  home1.html  login.html  nav.html  profile_counselor.html  profile_hero.html  questions.html  questions1.html  questions2.html  result.html  select_counselor.html  self_help.html  visualization.html
