[tool.poetry]
name = "repl_nix_AnuYog"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.9"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.2"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
